# xsubtensor

./: .env.subnet-math.example  .env.subnet-navigation.example  .env.subnet-slam.example  .env.subnet-vla.example  .gitignore  .gitmodules  FAUCET_LOCAL.md  HOW_TO_CREATE_AND_RUN_SUBNET.md  MINTING_SHARE_SUBNETS.md  REQUEST_NET_GRAPH.md  REQUEST_TO_SUBNET.md  RUN_LOCAL.md  RUN_LOCAL_SUBNET.md  SETUP_LOG_SUBNET_MATH.md  SHORT_HOW_TO_CREATE_AND_RUN_SUBNET.md  SUBNET_MATH_LOCALNET.md  SUBNET_MATH_OPERATIONS.md  SUBNET_NAVIGATION_LOCALNET.md  SUBNET_SLAM_LOCALNET.md  SUBNET_VLA_LOCALNET.md  TODO_SUBNET_NAVIGATION.md  docker-compose.localnet.yml  docker-compose.subnet-math.yml  docker-compose.subnet-navigation.yml  docker-compose.subnet-slam.yml  docker-compose.subnet-vla.yml  docker-compose.yml
docs/: network-snapshot.example.json  network-snapshot.full.example.json  running-subtensor-locally.md
scripts/: call_vla_probe_skip_dendrite.py  get_rules.py  (+19 more)
subnet-slam/: .dockerignore  Dockerfile  README_SUBNET_SLAM.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
subnet-slam/neurons/: miner.py
subnet-slam/poc/: README_POC.md  requirements-poc.txt  video_validator_openai_poc.py
subnet-slam/scripts/: query_miner.py
subnet-slam/template/: mock.py  protocol.py  runtime_client.py
subnet-slam/template/api/: dummy.py  get_query_axons.py
subnet-slam/template/base/: miner.py  validator.py
subnet-slam/template/utils/: config.py  uids.py
subnet-slam/template/validator/: forward.py  reward.py
subnet-slam/tests/: helpers.py  test_template_validator.py
(+35 files in other folders)
